--- a/src/main/webapp/WEB-INF/view/header.html
+++ b/src/main/webapp/WEB-INF/view/header.html
@@ -1,6 +1,4 @@
-
 <head>
-
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
 
@@ -8,7 +6,8 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap-theme.min.css">
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
-
+    <script src="http://jqueryvalidation.org/files/dist/jquery.validate.min.js"></script>
+    <script src="http://jqueryvalidation.org/files/dist/additional-methods.min.js"></script>
     <!-- Latest compiled and minified JavaScript -->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
     <meta charset="utf-8">
@@ -18,7 +17,8 @@
     <meta name="description" content="">
     <meta name="author" content="">
     <link rel="icon" href="../../favicon.ico">
-    <title>Student Time</title>
+
+    <title>Student Time App</title>
 
     <!-- Bootstrap core CSS -->
     <link href="../../webapp/resources/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -37,73 +37,3 @@
     <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
 </head>
-
-<body>
-
-<nav class="navbar navbar-inverse navbar-fixed-top">
-    <form:form class="navbar-form navbar-left">
-        <div class="dropdown">
-            <button class="btn btn-primary dropdown-toggle" type="button" id="dropdownMenu1"
-                    data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
-                Post
-                <span class="caret"></span>
-            </button>
-            <ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
-                <li><a href="postJob">Job</a></li>
-                <li><a href="postVolunteering">Volunteer work</a></li>
-                <li><a href="postNotice">Notice</a></li>
-            </ul>
-        </div>
-    </form:form>
-    <div class="container">
-        <div class="navbar-header">
-
-            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar"
-                    aria-expanded="false" aria-controls="navbar">
-                <span class="sr-only">Toggle navigation</span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-            </button>
-
-            <a class="navbar-brand" href="/index">Student Time</a>
-        </div>
-        <% if (session.getAttribute("loggedUserName") == null) { %>
-        <div id="navbar" class="navbar-collapse collapse">
-            <form:form class="navbar-form navbar-right" method="get" action="signin" modelAttribute="signin">
-                <button type="submit" class="btn btn-success">Sign up</button>
-            </form:form>
-            <form:form class="navbar-form navbar-right" method="post" action="login" modelAttribute="login">
-                <div class="form-group">
-                    <form:input type="text" placeholder="Username" class="form-control" path="username"/>
-                </div>
-                <div class="form-group">
-                    <form:password placeholder="Password" class="form-control" path="password"/>
-                </div>
-                <button type="submit" class="btn btn-success">Log in</button>
-            </form:form>
-        </div>
-        <% } else {%>
-        <div class="navbar-form navbar-right">
-            <form:form method="post" action="logout">
-                <button type="submit" class="btn btn-success">Log out</button>
-            </form:form>
-        </div>
-        <a class="navbar-brand navbar-right" href="#">Welcome <%= session.getAttribute("loggedUserName")%>!</a>
-        <%}%>
-
-        <!--/.navbar-collapse -->
-    </div>
-</nav>
-
-<!-- Main jumbotron for a primary marketing message or call to action -->
-<div class="jumbotron">
-    <p class="container">
-
-    <h1>Student Time</h1>
-
-    <p>This is a website meant to help students to enhance their working skills, financial stability and CV
-        skills.</p>
-
-</div>
-</div>
